Update OG image URI

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <meta property="og:description" content="'Postales de la tormenta' es un proyecto de escritura creativa donde busco que cada fin de semana la ficción, la cotidiana realidad y las experiencias personales tengan límites borrosos" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://postalesdelatormenta.club/" />
-    <meta property="og:image" content="http://postalesdelatormenta.club/static/media/og-image.png" />
+    <meta property="og:image" content="http://postalesdelatormenta.club/og-image.png" />
   </head>
   <body>
     <noscript>Vas a necesitar habilitar JavaScript para poder ver el sitio.</noscript>
